--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RestAPI controller module using composite design pattern for structure and chain of responsibility design pattern",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -21,5 +21,6 @@
     "jest": "^28.1.3"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
