--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/inversify": "^2.0.33",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.11.9",
     "inversify": "^6.0.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4",
-    "jest": "^28.1.3"
+    "typescript": "^4.8.4"
   },
   "author": "",
   "license": "ISC",
